# E2E_Pseudo-Lidar

./: .gitignore  README.md  __main__.py  create_FPN_venv.sh  fpn_venv.grace_job  full_pipeline.grace_job  grace_setup.grace_job  grace_setup.sh  makefile  process.grace_job  pyproject.toml  requirements.txt
PL_cli/: README.md  __init__.py  cli.py  cli_new.py  edit_config.py  pyproject.toml  run_script.py
PL_cli/PL_cli/: cli.py  edit_config.py  model.py
PL_cli/tests/: __main__.py  test_cli.py  test_edit_config.py
carla_data/: .gitignore  README.md  automatic_control.py  carla_client.py  config.ini  config.py  config_example.py  correct_calibmatrices.txt  data_viewer.py  generate_traffic.py  kitti_utils.py
carla_data/data/: calibmatrices.txt  config.ini
carla_data/demo_frame/: dynamic_bbs.xml  labels.txt  obscured_bbs.xml  static_bbs.xml
carla_data/example_data/: calibmatrices.txt
carla_data/output/: test.csv  train.csv  val.csv
docs/source/: Config.rst  Processing.rst  conf.py  index.rst
models/: README.md  generate_pl.py
models/FPN/: create_FPN_venv.sh  fpn_pip_requirements.txt  fpn_venv.grace_job
models/FPN/train/: test.py  (+4 more)
models/PL_OG_disp/: finetune.py  logger.py
models/PSMNet/: finetune_3d.py  logger.py  predict.py  requirements.txt  submodule.py
models/depth_estimation/: finetune.py
processing/: PLDataset.py  README.md  clean.py  config.ini  config.py  dummy_config.ini  framework.md  generate_disp.py  normalizer.py  process.py  process.sh  sample.py  utils.py
results/: FPN_lidar_log.txt  FPN_pseudo_lidar_log.txt  PSMNet_finetune_log.txt
(+5525 files in other folders)
